rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__Content.snap
---
source: src/parser/definition.rs
expression: content
---
Resolved:
  uri: "file://input/message.adl"
  range:
    start:
      line: 5
      character: 11
    end:
      line: 5
      character: 18
