rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__Message.snap
---
source: src/parser/definition.rs
expression: message
---
Resolved:
  uri: "file://input/message.adl"
  range:
    start:
      line: 10
      character: 11
    end:
      line: 10
      character: 18
