rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__String.snap
---
source: src/parser/definition.rs
assertion_line: 245
expression: string
---
Resolved:
  uri: "file://input/message.adl"
  range:
    start:
      line: 3
      character: 16
    end:
      line: 3
      character: 22
