rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__common.string.StringNE.snap
---
source: src/parser/definition.rs
expression: string_not_empty
---
Import:
  source_module: input.message
  target_module_path:
    - common
    - string
  identifier: StringNE
