rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__definition-3.snap
---
source: src/parser/definition.rs
expression: name
---
Resolved:
  uri: "file://input/message.adl"
  range:
    start:
      line: 3
      character: 9
    end:
      line: 3
      character: 13
