rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__definition__test__definition-5.snap
---
source: src/parser/definition.rs
expression: user
---
- Import:
    source_module: input.message
    target_module_path:
      - common
      - db
    identifier: User
